Sorta fixed wrapping issue on endpoint list. Added Path and Port back to Http and Https for the moment, pending a classier solution. Couple other bits of cleanup

--- a/public/css/less/rt/layout/forms.less
+++ b/public/css/less/rt/layout/forms.less
@@ -90,6 +90,10 @@ input[type="color"] {
   width: 250px;
 }
 
+.rt-input-short-text {
+  width: 50px;
+}
+
 .rt-modal-input-styles {
   label {
     color: @grayDark;
@@ -140,6 +144,9 @@ input[type="color"] {
   display: inline-block;
 }
 
+.rt-form-row-long {
+  max-width: 800px;
+}
 
 
 // Labels
